Fixed some layout bugs

--- a/css/scss/_bootstrap.scss
+++ b/css/scss/_bootstrap.scss
@@ -73,9 +73,8 @@
     }
 
     .navbar-toggler {
-        padding: 0;
+        padding: 0.625rem 0 0.625rem 0.625rem;
         border: 0;
-        margin-left: 0.625rem;
         color: $navbar-link;
         line-height: normal;
         font-size: 1rem;
